--- a/index.html
+++ b/index.html
@@ -327,14 +327,35 @@ button, input, optgroup, select, textarea {
 
 .text-info {
     color: #48b0f7 !important;
-}    </style>
+}
+/* Responsive Adjustments */
+        @media (max-width: 576px) {
+            .card-header {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            .ps-container {
+                height: 300px !important; /* Adjust for smaller screens */
+            }
+            .publisher {
+                padding: 8px 10px;
+            }
+            .media-chat {
+                padding-right: 40px;
+            }
+            .media-chat .media-body p {
+                padding: 4px 6px;
+                font-size: 14px; /* Smaller font for smaller screens */
+            }
+        }    </style>
 </head>
 <body>
 
 <div class="page-content page-container" id="page-content">
     <div class="padding">
         <div class="row container d-flex justify-content-center">
-            <div class="col-md-6">
+	    <!-- To adjust different screen sizes -->
+            <div class="col-lg-6 col-md-8 col-sm-10 col-12">
                 <div class="card card-bordered">
                     <div class="card-header">
                         <h4 class="card-title"><strong>Chat</strong></h4>
