--- a/index.html
+++ b/index.html
@@ -354,7 +354,6 @@ button, input, optgroup, select, textarea {
 <div class="page-content page-container" id="page-content">
     <div class="padding">
         <div class="row container d-flex justify-content-center">
-	    <!-- To adjust different screen sizes -->
             <div class="col-lg-6 col-md-8 col-sm-10 col-12">
                 <div class="card card-bordered">
                     <div class="card-header">
@@ -365,7 +364,7 @@ button, input, optgroup, select, textarea {
                         <!-- Chat messages will be dynamically added here -->
                     </div>
                     <div class="publisher bt-1 border-light">
-                        <img class="avatar avatar-xs" src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
+                        <img class="avatar avatar-xs" src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="panda"/>
                         <input class="publisher-input" type="text" id="chat-input" placeholder="Write something">
                         <span class="publisher-btn file-group">
                             <i class="fa fa-paperclip file-browser"></i>
@@ -429,8 +428,7 @@ button, input, optgroup, select, textarea {
         .catch(error => {
             console.error('Error:', error);
         });
-    }
-</script>
+    }</script>
 
 </body>
 </html>
